@@ -16,3 +16,4 @@ fuzzy_min 0
 fuzzy_max 0
 multidir  --- 
 save_tcclog  --- 
+continue_on_failure ---
